#include "inner_interface.h"
#include "inner.notice.pb.h"

void* on_pb_addNotice_req(inner::addNotice_req* req, void* ud, size_t* rsp_len)
{
    inner::addNotice_rsp rsp;

    return NULL;
}

void* on_pb_getNoticeList_req(inner::getNoticeList_req* req, void* ud, size_t* rsp_len)
{
    inner::getNoticeList_rsp rsp;

    return NULL;
}

void* on_pb_updateNotice_req(inner::updateNotice_req* req, void* ud, size_t* rsp_len)
{
    inner::updateNotice_rsp rsp;

    return NULL;
}

void* on_pb_delNotice_req(inner::delNotice_req* req, void* ud, size_t* rsp_len)
{
    inner::delNotice_rsp rsp;

    return NULL;
}

